--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,64 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: 'Gotham-Black';
+    src: url(assets/fonts/Gotham-Black.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Bold';
+    src: url(assets/fonts/Gotham-Bold.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Bold-Italic';
+    src: url(assets/fonts/Gotham-Bold-Italic.ttf);
+}
+
+@font-face {
+    font-family: 'Gotham-Book';
+    src: url(assets/fonts/Gotham-Book.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Extra-Light-Italic';
+    src: url(assets/fonts/Gotham-Extra-Light-Italic.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Light';
+    src: url(assets/fonts/Gotham-Light.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Light';
+    src: url(assets/fonts/Gotham-Light.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Medium';
+    src: url(assets/fonts/Gotham-Medium.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Regular';
+    src: url(assets/fonts/Gotham-Regular.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Thin';
+    src: url(assets/fonts/Gotham-Thin.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Thin-Italic';
+    src: url(assets/fonts/Gotham-Thin-Italic.otf);
+}
+
+@font-face {
+    font-family: 'Gotham-Ultra';
+    src: url(assets/fonts/Gotham-Ultra.otf);
+}
+
+body {
+  font-family: Gotham-Medium;
+}
